--- a/styles.css
+++ b/styles.css
@@ -7,18 +7,22 @@
 .title{
     display: flex;
     justify-content: center;
-    transform: translateY(100px);
+    transform: translateY(50px);
+    color:white;
+    font-size: 1.4rem;
 }
 
 body{
     background: #146268;
+    font-family: sans-serif, "Poppins";
+
 }
 .content{
-    height: 100vh;
+    height: 80vh;
     display: flex;
     justify-content: center;
     align-items: center;
-    font-family: sans-serif;
+    font-family: sans-serif, "Poppins";
     flex-direction: column;
 
 }
@@ -124,5 +128,9 @@ h2{
 .credit{
     display: flex;
     justify-content: center;
-    transform: translateY(-150px);
+    transform: translateY(50px);
+    color: rgb(136, 132, 132);
+    background:white;
+    height: 88px;
+    align-items: center;
 }
